kubernetes/apps/free-games-claimer/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: free-games-claimer
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
