kubernetes/apps/free-games-claimer/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: free-games-claimer
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
